--- a/ykiacoes.html
+++ b/ykiacoes.html
@@ -18,7 +18,6 @@
       align-items: center;
       min-height: 100vh;
     }
-
     main {
       width: 100%;
       max-width: 500px;
@@ -27,31 +26,10 @@
       border-radius: 16px;
       box-shadow: 0 8px 24px rgba(0,0,0,0.5);
     }
-
-    header {
-      text-align: center;
-      font-size: 1.6em;
-      font-weight: 600;
-      margin-bottom: 20px;
-      letter-spacing: 1px;
-    }
-
-    h2 {
-      margin-top: 0;
-      text-align: center;
-      font-size: 1.2em;
-      color: #e0e1dd;
-      margin-bottom: 20px;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
+    header { text-align: center; font-size: 1.6em; font-weight: 600; margin-bottom: 20px; letter-spacing: 1px; }
+    h2 { margin-top: 0; text-align: center; font-size: 1.2em; color: #e0e1dd; margin-bottom: 20px; }
+    form { display: flex; flex-direction: column; gap: 15px; }
     label { font-weight: 500; font-size: 0.95em; }
-
     select, input {
       padding: 12px;
       border: none;
@@ -62,9 +40,7 @@
       width: 100%;
       transition: background 0.3s;
     }
-
     select:focus, input:focus { outline: none; background: #2f455f; }
-
     .membros-section { background: #162534; padding: 15px; border-radius: 12px; margin-bottom: 15px; }
     .membro-box { display: flex; align-items: center; gap: 8px; margin-bottom: 8px; }
     .membro-box select { flex: 1; }
@@ -100,7 +76,7 @@
         <div id="membrosContainer">
           <div class="membro-box">
             <select id="membroPrincipal" name="membroPrincipal" required>
-              <option value="">Selecione o membro principal</option>
+              <option value="">Carregando membros...</option>
             </select>
           </div>
         </div>
@@ -109,7 +85,7 @@
 
       <label for="produto">Produto</label>
       <select id="produto" name="produto" required>
-        <option value="">Selecione um produto</option>
+        <option value="">Carregando produtos...</option>
       </select>
 
       <label for="quantidade">Quantidade Produto</label>
@@ -126,6 +102,39 @@
   <script>
     const API_URL = "https://script.google.com/macros/s/SEU_SCRIPT_ID/exec";
 
+    // Carrega membros
+    function carregarMembros() {
+      fetch(API_URL + "?action=getMembros")
+        .then(res => res.json())
+        .then(lista => {
+          const principal = document.getElementById("membroPrincipal");
+          principal.innerHTML = '<option value="">Selecione o membro principal</option>';
+          lista.sort().forEach(m => {
+            const option = document.createElement("option");
+            option.value = m;
+            option.textContent = m;
+            principal.appendChild(option);
+          });
+        });
+    }
+
+    // Carrega produtos
+    function carregarProdutos() {
+      fetch(API_URL + "?action=getProdutos")
+        .then(res => res.json())
+        .then(lista => {
+          const produtoSelect = document.getElementById("produto");
+          produtoSelect.innerHTML = '<option value="">Selecione um produto</option>';
+          lista.forEach(item => {
+            const option = document.createElement("option");
+            option.value = item.produto;
+            option.textContent = item.produto;
+            produtoSelect.appendChild(option);
+          });
+        });
+    }
+
+    // Adiciona membro extra
     function adicionarMembro() {
       const container = document.getElementById("membrosContainer");
       const div = document.createElement("div");
@@ -134,15 +143,12 @@
       const select = document.createElement("select");
       select.name = "membroExtra";
       select.required = true;
-
-      const opcaoPadrao = document.createElement("option");
-      opcaoPadrao.value = "";
-      opcaoPadrao.textContent = "Selecione membro";
-      select.appendChild(opcaoPadrao);
+      select.innerHTML = '<option value="">Carregando membros...</option>';
 
       fetch(API_URL + "?action=getMembros")
         .then(res => res.json())
         .then(lista => {
+          select.innerHTML = '<option value="">Selecione membro</option>';
           lista.sort().forEach(m => {
             const option = document.createElement("option");
             option.value = m;
@@ -155,47 +161,16 @@
       btn.type = "button";
       btn.textContent = "X";
       btn.className = "remove-btn";
-      btn.onclick = () => { div.remove(); };
+      btn.onclick = () => div.remove();
 
       div.appendChild(select);
       div.appendChild(btn);
       container.appendChild(div);
     }
 
-    function carregarMembros() {
-      fetch(API_URL + "?action=getMembros")
-        .then(res => res.json())
-        .then(lista => {
-          const principal = document.getElementById("membroPrincipal");
-          lista.sort().forEach(m => {
-            const option = document.createElement("option");
-            option.value = m;
-            option.textContent = m;
-            principal.appendChild(option);
-          });
-        });
-    }
-
-    function carregarProdutos() {
-      fetch(API_URL + "?action=getProdutos")
-        .then(res => res.json())
-        .then(lista => {
-          const produtoSelect = document.getElementById("produto");
-          lista.forEach(item => {
-            const option = document.createElement("option");
-            option.value = item.produto;
-            option.textContent = item.produto; // mostra só o nome do produto
-            produtoSelect.appendChild(option);
-          });
-        });
-    }
-
-    carregarMembros();
-    carregarProdutos();
-
+    // Submit do formulário
     document.getElementById("registroForm").addEventListener("submit", function(e) {
       e.preventDefault();
-
       const formData = {
         action: "salvarRegistro",
         membroPrincipal: document.getElementById("membroPrincipal").value,
@@ -211,9 +186,13 @@
         headers: { "Content-Type": "application/json" }
       })
       .then(res => res.text())
-      .then(msg => { document.getElementById("resultado").textContent = msg; })
-      .catch(err => { document.getElementById("resultado").textContent = "❌ Erro ao salvar registro."; });
+      .then(msg => document.getElementById("resultado").textContent = msg)
+      .catch(err => document.getElementById("resultado").textContent = "❌ Erro ao salvar registro.");
     });
+
+    // Inicializa
+    carregarMembros();
+    carregarProdutos();
   </script>
 </body>
 </html>
