--- a/ykiacoes.html
+++ b/ykiacoes.html
@@ -124,6 +124,7 @@
   </main>
 
   <script>
+    // 🔹 URL do seu App Web já publicado
     const API_URL = "https://script.google.com/macros/s/AKfycbwkeOFd5SJj3F1JxBiFDwi_0hm_mxTCQHqCttC8cULt_OLwp1rTrDOuUBw490J9rmKP/exec";
 
     // 🔹 Adiciona novos membros extras dinamicamente
@@ -214,13 +215,13 @@
       })
         .then(res => res.text())
         .then(msg => {
-          document.getElementById("resultado").textContent = msg;
+          document.getElementById("resultado").textContent = "✅ " + msg;
         })
         .catch(err => {
           document.getElementById("resultado").textContent = "❌ Erro ao salvar registro.";
+          console.error(err);
         });
     });
   </script>
 </body>
 </html>
-
