--- a/ykiacoes.html
+++ b/ykiacoes.html
@@ -18,7 +18,6 @@
       align-items: center;
       min-height: 100vh;
     }
-
     main {
       width: 100%;
       max-width: 500px;
@@ -27,7 +26,6 @@
       border-radius: 16px;
       box-shadow: 0 8px 24px rgba(0,0,0,0.5);
     }
-
     header {
       text-align: center;
       font-size: 1.6em;
@@ -35,7 +33,6 @@
       margin-bottom: 20px;
       letter-spacing: 1px;
     }
-
     h2 {
       margin-top: 0;
       text-align: center;
@@ -43,15 +40,12 @@
       color: #e0e1dd;
       margin-bottom: 20px;
     }
-
     form {
       display: flex;
       flex-direction: column;
       gap: 15px;
     }
-
     label { font-weight: 500; font-size: 0.95em; }
-
     select, input {
       padding: 12px;
       border: none;
@@ -62,9 +56,7 @@
       width: 100%;
       transition: background 0.3s;
     }
-
     select:focus, input:focus { outline: none; background: #2f455f; }
-
     .membros-section { background: #162534; padding: 15px; border-radius: 12px; margin-bottom: 15px; }
     .membro-box { display: flex; align-items: center; gap: 8px; margin-bottom: 8px; }
     .membro-box select { flex: 1; }
@@ -124,10 +116,8 @@
   </main>
 
   <script>
-    // 🔹 URL do seu App Web já publicado
     const API_URL = "https://script.google.com/macros/s/AKfycbwAETUzdjPRnne_hSjHeOHsp0i0j0-LvETrBpHCq-mqrZEvfWdmRW7uF4MhSYZxoHJ8/exec";
 
-    // 🔹 Adiciona novos membros extras dinamicamente
     function adicionarMembro() {
       const container = document.getElementById("membrosContainer");
       const div = document.createElement("div");
@@ -136,47 +126,48 @@
       const select = document.createElement("select");
       select.name = "membroExtra";
       select.required = true;
-
-      const opcaoPadrao = document.createElement("option");
-      opcaoPadrao.value = "";
-      opcaoPadrao.textContent = "Selecione membro";
-      select.appendChild(opcaoPadrao);
+      select.innerHTML = '<option value="">Carregando membros...</option>';
 
       fetch(API_URL + "?action=getMembros")
         .then(res => res.json())
         .then(lista => {
+          select.innerHTML = '<option value="">Selecione membro</option>';
           lista.sort().forEach(m => {
+            const nome = m.trim();
             const option = document.createElement("option");
-            option.value = m;
-            option.textContent = m;
+            option.value = nome;
+            option.textContent = nome;
             select.appendChild(option);
           });
-        });
+        })
+        .catch(err => console.error("Erro carregando membros extras:", err));
 
       const btn = document.createElement("button");
       btn.type = "button";
       btn.textContent = "X";
       btn.className = "remove-btn";
-      btn.onclick = () => { div.remove(); };
+      btn.onclick = () => div.remove();
 
       div.appendChild(select);
       div.appendChild(btn);
       container.appendChild(div);
     }
 
-    // 🔹 Carregar membros e produtos do Google Sheets
     function carregarMembros() {
       fetch(API_URL + "?action=getMembros")
         .then(res => res.json())
         .then(lista => {
           const principal = document.getElementById("membroPrincipal");
+          principal.innerHTML = '<option value="">Selecione o membro principal</option>';
           lista.sort().forEach(m => {
+            const nome = m.trim();
             const option = document.createElement("option");
-            option.value = m;
-            option.textContent = m;
+            option.value = nome;
+            option.textContent = nome;
             principal.appendChild(option);
           });
-        });
+        })
+        .catch(err => console.error("Erro carregando membros:", err));
     }
 
     function carregarProdutos() {
@@ -184,47 +175,55 @@
         .then(res => res.json())
         .then(lista => {
           const produtoSelect = document.getElementById("produto");
+          produtoSelect.innerHTML = '<option value="">Selecione um produto</option>';
           lista.forEach(item => {
+            const nome = item.produto.toString().trim();
             const option = document.createElement("option");
-            option.value = item.produto;
-            option.textContent = `${item.produto} ($${item.custo})`;
+            option.value = nome;
+            option.textContent = nome;
             produtoSelect.appendChild(option);
           });
-        });
+        })
+        .catch(err => console.error("Erro carregando produtos:", err));
     }
 
-    carregarMembros();
-    carregarProdutos();
-
-    // 🔹 Envio do formulário
     document.getElementById("registroForm").addEventListener("submit", function(e) {
       e.preventDefault();
 
+      const quantidadeNum = Number(document.getElementById("quantidade").value) || 0;
+      const valorNum = parseFloat(document.getElementById("valorUnitario").value.replace(",", ".")) || 0;
+
       const formData = {
-        membroPrincipal: document.getElementById("membroPrincipal").value,
-        membrosExtras: Array.from(document.querySelectorAll('[name="membroExtra"]')).map(s => s.value),
-        produto: document.getElementById("produto").value,
-        quantidade: document.getElementById("quantidade").value,
-        valorUnitario: document.getElementById("valorUnitario").value
+        action: "salvarRegistro",
+        membroPrincipal: document.getElementById("membroPrincipal").value.trim(),
+        membrosExtras: Array.from(document.querySelectorAll('[name="membroExtra"]')).map(s => s.value.trim()),
+        produto: document.getElementById("produto").value.trim(),
+        quantidade: quantidadeNum,
+        valorUnitario: valorNum
       };
 
+      // Para evitar CORS preflight, usar content-type menos “complexo”
       fetch(API_URL + "?action=salvarRegistro", {
         method: "POST",
-        body: JSON.stringify(formData),
-        headers: { "Content-Type": "application/json" }
+        headers: { "Content-Type": "text/plain;charset=UTF-8" },
+        body: JSON.stringify(formData)
       })
-        .then(res => res.text())
-        .then(msg => {
-          document.getElementById("resultado").textContent = "✅ " + msg;
-        })
-        .catch(err => {
-          document.getElementById("resultado").textContent = "❌ Erro ao salvar registro.";
-          console.error(err);
-        });
+      .then(res => {
+        if (!res.ok) throw new Error("Resposta não OK");
+        return res.text();
+      })
+      .then(msg => {
+        document.getElementById("resultado").textContent = "✅ " + msg;
+      })
+      .catch(err => {
+        document.getElementById("resultado").textContent = "❌ Erro ao salvar registro.";
+        console.error("Erro no fetch salvarRegistro:", err);
+      });
     });
+
+    // Inicializa dropdowns
+    carregarMembros();
+    carregarProdutos();
   </script>
 </body>
 </html>
-
-
-
